--- a/Document App/Document App/Base.lproj/Main.storyboard
+++ b/Document App/Document App/Base.lproj/Main.storyboard
@@ -15,9 +15,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="402" height="874"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" text="" id="SPL-9m-CQt">
+                            <rect key="frame" x="0.0" y="0.0" width="402" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="7oM-48-sD8" id="Zpk-a0-KFt"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="DocumentCell" textLabel="Y2g-15-8nY" detailTextLabel="lH6-p0-aSY" style="IBUITableViewCellStyleSubtitle" id="FhX-JT-PjB">
-                                <rect key="frame" x="0.0" y="50" width="402" height="43.666667938232422"/>
+                                <rect key="frame" x="0.0" y="94" width="402" height="43.666667938232422"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FhX-JT-PjB" id="ZMe-gi-MzY">
                                     <rect key="frame" x="0.0" y="0.0" width="371.66666666666669" height="43.666667938232422"/>
@@ -47,6 +55,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="📑 Liste des documents" id="aEd-aw-tVP"/>
+                    <connections>
+                        <outlet property="searchBar" destination="SPL-9m-CQt" id="0PS-wg-1OF"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j8e-tb-cie" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
